# deepgen

./: DATA.md  EVAL.md  README.md  TRAIN.md  main.py  pyproject.toml
DeepGen-RL/: README.md
configs/datasets/deepgen_512_fix_pixels/: cc12m.py  edit_pretrain.py  joint_pretrain.py  joint_sft_zh.py  laion6m.py  megalith10m.py  redcaps5m.py  t2i_pretrain.py  t2i_sft_zh.py  text2image2m.py
configs/finetune/: deepgen_joint_sft.py  deepgen_joint_sft_scb.py
configs/models/: deepgen_scb.py
configs/pretrain/: deepgen_joint_pretrain.py  deepgen_joint_pretrain_scb.py
deepgen/configs/: deepgen.py
deepgen/datasets/image2image/: edit_datasets.py
deepgen/datasets/text2image/: blip3_o.py  caption_datasets.py
deepgen/models/sd3_kontext/: qwen2_5_vl_sd3_hf_dynamic.py  qwen2_5_vl_sd3_hf_dynamic_fusion.py  sd3_hf.py  sd3_hf_dynamic.py
deepgen/pipelines/: __init__.py  deepgen_pipeline.py
docs/: DATA.md  EVAL.md
scripts/: image2image.py  text2image.py  train.py
scripts/evaluation/: corebench.py  gen_eval.py
src/pipelines/: deepgen_pipeline.py
