[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgen"
version = "0.1.0"
description = "DeepGen-RL: Reward-Driven Reinforcement Learning for Generative AI"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "deepspeed>=0.18.6",
    "einops>=0.8.2",
    "mmengine>=0.10.7",
    "torch>=2.8.0,<2.10",
    "xtuner>=0.1.23",
    "transformers>=4.56.1, <5",
    "diffusers>=0.36.0",
    "flash-attn>=2.8.3",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "ipykernel>=6.29.5",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
